--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -9,231 +9,31 @@ redir-port: 7892
 allow-lan: false
 mode: rule
 log-level: silent
-external-controller: 127.0.0.1:9090
-hosts:
-  # '*.clash.dev': 127.0.0.1
-  # '.dev': 127.0.0.1
-  # 'alpha.clash.dev': '::1'
-
-  # Firebase Cloud Messaging
-  'mtalk.google.com': 108.177.125.188
-  # Google Dl
-  'dl.google.com': 180.163.151.161
-  'dl.l.google.com': 180.163.151.161
-
-dns:
-  enable: false
-  listen: 0.0.0.0:53
-  # ipv6: false # when the false, response to AAAA questions will be empty
-
-  # These nameservers are used to resolve the DNS nameserver hostnames below.
-  # Specify IP addresses only
-  default-nameserver:
-    - 119.29.29.29
-  enhanced-mode: redir-host # or fake-ip
-  fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
-  # use-hosts: true # lookup hosts and return IP record
-  
-  # Hostnames in this list will not be resolved with fake IPs
-  # i.e. questions to these domain names will always be answered with their
-  # real IP addresses
-  fake-ip-filter:
-    - '*.lan'
-    - localhost.ptlogin2.qq.com
-    - '+.srv.nintendo.net'
-    - '+.stun.playstation.net'
-    - '+.msftconnecttest.com'
-    - '+.msftncsi.com'
-    - '+.xboxlive.com'
-    - 'msftconnecttest.com'
-    - 'xbox.*.microsoft.com'
-    - '*.battlenet.com.cn'
-    - '*.battlenet.com'
-    - '*.blzstatic.cn'
-    - '*.battle.net'
-  
-  # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
-  # All DNS questions are sent directly to the nameserver, without proxies
-  # involved. Clash answers the DNS question with the first result gathered.
-  nameserver:
-    - 119.29.29.29
-    - 114.114.114.114 # default value
-    - 8.8.8.8 # default value
-    # - tls://dns.rubyfish.cn:853 # DNS over TLS
-    # - https://1.1.1.1/dns-query # DNS over HTTPS
-    # - dhcp://en0 # dns from dhcp
-
-  # When `fallback` is present, the DNS server will send concurrent requests
-  # to the servers in this section along with servers in `nameservers`.
-  # The answers from fallback servers are used when the GEOIP country
-  # is not `CN`.
-  # fallback:
-  #   - tcp://1.1.1.1
-
-  # If IP addresses resolved with servers in `nameservers` are in the specified
-  # subnets below, they are considered invalid and results from `fallback`
-  # servers are used instead.
-  #
-  # IP address resolved with servers in `nameserver` is used when
-  # `fallback-filter.geoip` is true and when GEOIP of the IP address is `CN`.
-  #
-  # If `fallback-filter.geoip` is false, results from `nameserver` nameservers
-  # are always used if not match `fallback-filter.ipcidr`.
-  #
-  # This is a countermeasure against DNS pollution attacks.
-  # fallback-filter:
-  #   geoip: true
-  #   geoip-code: CN
-  #   ipcidr:
-  #     - 240.0.0.0/4
-  #   domain:
-  #     - '+.google.com'
-  #     - '+.facebook.com'
-  #     - '+.youtube.com'
-  
-  # Lookup domains via specific nameservers
-  # nameserver-policy:
-  #   'www.baidu.com': '114.114.114.114'
-  #   '+.internal.crop.com': '10.0.0.1'
-
-secret: ''
+external-controller: 9090
 proxy-providers:
-    
-    gua_filter:
-        type: http
-        path: ./Mine Filters/gua_filter.yaml
-#        url: https://gitee.com/rn-wyz/Documents/raw/c/providers.yaml
-        url: https://subscribe.a9b.top/link/qxbSc0AV3UKjyq06?clash=2
-        interval: 3600
-        filter: 'v1'
-        health-check:
-            enable: true
-            url: http://www.gstatic.com/generate_204
-            interval: 300
-
-    yiyo_filter:
-        type: http
-        path: ./Mine Filters/yiyo_filter.yaml
-#        url: https://gitee.com/rn-wyz/Documents/raw/c/providers.yaml
-        url: https://yiyocloud.com/link/VfhPhDV3jyyNKBGD?clash=1
-        interval: 3600
-#        filter: '台湾-中继|新加坡-中继|韩国-中继'
-        filter: '香港-中继|台湾-中继|新加坡-中继|韩国-中继'
-        health-check:
-            enable: true
-            url: http://www.gstatic.com/generate_204
-            interval: 300
-
-    stt_filter:
-        type: http
-        path: ./Mine Filters/stt_filter.yaml
-#        url: https://gitee.com/rn-wyz/Documents/raw/c/providers.yaml
-        url: https://sttsub.xyz/link/8mljlCLSYhy8lnjs?clash=1
-        interval: 3600
-        filter: '香港 [A-C]|台湾 [A-C]'
-        health-check:
-            enable: true
-            url: http://www.gstatic.com/generate_204
-            interval: 300
-
-    jj_filter:
-        type: http
-        path: ./Mine Filters/jj_filter.yaml
-#        url: https://gitee.com/rn-wyz/Documents/raw/c/providers.yaml
-        url: https://a.luxury/link/o4PGAk2vGIzZuLCW?clash=2
-        interval: 3600
-        filter: 'BGP|HiNet'
-        health-check:
-            enable: true
-            url: http://www.gstatic.com/generate_204
-            interval: 300
-
 proxy-groups:
-  - name: ✈️ 节点选择
-    type: select
-    proxies:
-      - 🌍 全局自动选择
-      - 🐤 几鸡自动
-      - 🐸 呱呱自动
-      - 🪶 翼游自动
-      - 🦌 STT自动
-      - DIRECT
-      
-  - name: 🐟 漏网之鱼
-    type: select
-    proxies:
-      - DIRECT
-      - ✈️ 节点选择
-      
-  - name: 🔴 全球拦截
-    type: select
-    proxies:
-      - DIRECT
-      - ✈️ 节点选择
-      
-  - name: 🌍 全局自动选择
-    type: url-test
-    use:
-#      - gua_filter
-      - jj_filter
-      - stt_filter
-      - yiyo_filter
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
 
-  - name: 🐤 几鸡自动
-    type: url-test
-    use:
-      - jj_filter
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-    
-  - name: 🐸 呱呱自动
-    type: url-test
-    use:
-      - gua_filter
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
+        - name: 🐟 漏网之鱼 
+          type: select
+          proxies:
+            - DIRECT
+            - 🔰 选择节点
+            - REJECT
+            
+        - name: 🔰 选择节点 
+          type: select
 
-  - name: 🪶 翼游自动
-    type: url-test
-    use:
-      - yiyo_filter
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  - name: 🦌 STT自动
-    type: url-test
-    use:
-      - stt_filter
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  # - name: 🇭🇰香港
-  #   type: select
-  #   use:
-  #     - hk
-  
-  # - name: 🇨🇳台湾
-  #   type: select
-  #   use:
-  #     - tw
-
-  # - name: 🇸🇬新加坡
-  #   type: select
-  #   use:
-  #     - sg
-  
-  # - name: 🇺🇸美国
-  #   type: select
-  #   use:
-  #     - us
-
-  # - name: 🇰🇷韩国
-  #   type: select
-  #   use:
-  #     - kr
-
+        - name: 🌏 自动选择
+          type: url-test
+          url: http://www.gstatic.com/generate_204
+          interval: 300
+            
+        - name: 🛑 广告拦截
+          type: select
+          proxies:
+            - DIRECT
+            - REJECT
+            - 🔰 选择节点
 rule-providers:
   reject:
     type: http
@@ -337,18 +137,18 @@ rules:
   - DOMAIN,clash.razord.top,DIRECT
   - DOMAIN,yacd.haishan.me,DIRECT
   - RULE-SET,private,DIRECT
-  - RULE-SET,reject,🔴 全球拦截
+  - RULE-SET,reject,🛑 广告拦截
   - RULE-SET,icloud,DIRECT
   - RULE-SET,apple,DIRECT
   - RULE-SET,google,DIRECT
-  - RULE-SET,proxy,✈️ 节点选择
+  - RULE-SET,proxy,🔰 选择节点
   - RULE-SET,direct,DIRECT
   - RULE-SET,lancidr,DIRECT
   - RULE-SET,cncidr,DIRECT
-  - RULE-SET,gfw,✈️ 节点选择
-  - RULE-SET,tld-not-cn,✈️ 节点选择
-  - RULE-SET,greatfire,✈️ 节点选择
-  - RULE-SET,telegramcidr,✈️ 节点选择
+  - RULE-SET,gfw,🔰 选择节点
+  - RULE-SET,tld-not-cn,🔰 选择节点
+  - RULE-SET,greatfire,🔰 选择节点
+  - RULE-SET,telegramcidr,🔰 选择节点
   - GEOIP,,DIRECT
   - GEOIP,CN,DIRECT
 
