--- a/clash_premium.yaml
+++ b/clash_premium.yaml
@@ -9,7 +9,26 @@ redir-port: 7892
 allow-lan: false
 mode: rule
 log-level: silent
-external-controller: 9090
+external-controller: 127.0.0.1:9090
+dns:
+  enable: true
+  enhanced-mode: fake-ip
+  nameserver:
+    - 8.8.8.8
+    - 119.29.29.29
+    - 223.5.5.5
+    - 114.114.114.114 # 真实请求DNS，可多设置几个
+# interface-name: en0 # 出口网卡名称，或者使用下方的自动检测
+tun:
+  enable: true
+  stack: system # 或 gvisor
+  dns-hijack: # DNS劫持设置为系统DNS
+    - 8.8.8.8
+    - 119.29.29.29
+    - 223.5.5.5
+    - 114.114.114.114 # 可任意设置，但为了保证CFW关闭后能不影响联网，建议设置真实能访问的DNS服务器
+  auto-route: true
+  auto-detect-interface: true # 自动检测出口网卡
 proxy-providers:
 proxy-groups:
   - name: 🐟 漏网之鱼 
